prevent body overflow

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,6 +1,8 @@
 body {
     margin: 0;
     font-family: var(--font-family);
+    /* background-color: var(--primary-color); */
+    overflow: hidden;
 }
 
 a {
